// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlacementOrdering render shows toggle 1`] = `
<div
  className="placementOrdering"
>
  <_default
    onToggle={[Function]}
    toggled={false}
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  .
  <OrderingTiler
    instanceId="2"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <br />
  <Feedback />
</div>
`;

exports[`PlacementOrdering render snapshot 1`] = `
<div
  className="placementOrdering"
>
  <_default
    onToggle={[Function]}
    toggled={false}
  />
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  .
  <OrderingTiler
    instanceId="1"
    onDropChoice={[Function]}
    onRemoveChoice={[Function]}
    ordering={Object {}}
    tiler={[Function]}
  />
  <br />
  <Feedback />
</div>
`;
